--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>EV | Strona główna</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 	<link rel="stylesheet" href="ev.css">
 	<link rel="stylesheet" href="https://use.typekit.net/thy3evk.css">
