--- a/ev-ciekawostki.html
+++ b/ev-ciekawostki.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>EV | Ciekawostki</title>
 <link rel="stylesheet" href="https://use.typekit.net/thy3evk.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="ciek.css">
 </head>
 	
