--- a/ev-galeria.html
+++ b/ev-galeria.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>EV | Galeria</title>
 <link rel="stylesheet" href="gal.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 	
 <body>
