--- a/ev-wady_zalety.html
+++ b/ev-wady_zalety.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>EV | Wady i zalety</title>
 <link rel="stylesheet" href="wiz.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://use.typekit.net/thy3evk.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
