--- a/model3.html
+++ b/model3.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title> Galeria | Tesla model 3</title>
 <link rel="stylesheet" href="208.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://use.typekit.net/thy3evk.css">
 </head>
 
